IE9 border-collapse: separate; fix for box-shadows

--- a/stylesheets/scss/partials/theme.scss
+++ b/stylesheets/scss/partials/theme.scss
@@ -411,20 +411,17 @@ a{
 }
 
 .dropshadow{
-  border-left: 1px solid #E5E5E5;
-  border-right: 1px solid #E5E5E5;
-	box-shadow: 0 0 1px #b4b4b4, 
+  border-collapse: separate;
+	box-shadow: 0 0 2px #b4b4b4, 
 							0 2px 4px #b4b4b4;
-	box-shadow: 0 0 2px rgba(0,0,0,0.10), 
-							0 1px 2px rgba(0,0,0,0.10);
+	box-shadow: 0 0 2px rgba(0,0,0,0.20), 
+							0 2px 4px rgba(0,0,0,0.10);
 
 	&.product:hover{
-    border-left: 1px solid #D9D9D9;
-    border-right: 1px solid #D9D9D9;
-		box-shadow: 0 0 1px #b4b4b4, 
+		box-shadow: 0 0 2px #b4b4b4, 
 								0 3px 6px #C4C4C4;
-		box-shadow: 0 0 3px rgba(0,0,0,0.15), 
-								0 2px 4px rgba(0,0,0,0.05);
+		box-shadow: 0 0 2px rgba(0,0,0,0.20), 
+								0 4px 8px rgba(0,0,0,0.10);
 	}
 }
 
